--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -140,7 +140,7 @@
         <textarea class="form-control" id="text_note" rows="3" placeholder="我想說"></textarea>
       </div>
     </div>
-    <button class="btn btn-success">送出</button>
+    <button class="btn btn-success" id ="send">送出</button>
   </form>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -153,6 +153,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
     integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
