--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 
-<head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,8 +17,32 @@
       <div class="form-group col-12 col-md-4">
         <label for="input_name">姓名</label>
         <input type="text" id="input_name" class="form-control" placeholder="王大明">
+        <div class="invalid-feedback">
+          請確認資料是否正確
+        </div>
       </div>
     </div>
+    <!-- email -->
+    <div class="form-row">
+      <div class="form-group col-12 col-md-4">
+        <label for="input_name">email</label>
+        <input type="text" id="input_email" class="form-control" placeholder="wang@gmail.com">
+        <div class="invalid-feedback">
+          請確認資料是否正確
+        </div>
+      </div>
+    </div>
+    <!-- phone -->
+    <div class="form-row">
+      <div class="form-group col-12 col-md-4">
+        <label for="input_name">手機</label>
+        <input type="text" id="input_phone" class="form-control" placeholder="0975005038" mexlength="10">
+        <div class="invalid-feedback">
+          請確認資料是否正確
+        </div>
+      </div>
+    </div>
+    <!-- birthday year -->
     <div class="form-row">
       <div class="form-group col-12 col-md-6">
         <label>生日</label>
@@ -37,7 +60,11 @@
           <option value="1989">1989</option>
           <option value="1990">1990</option>
         </select>
+        <div class="invalid-feedback">
+          此欄位為必填
+        </div>
       </div>
+      <!-- birthday month -->
       <div class="form-group col-12 col-md-3">
         <label class="d-none d-md-block">&nbsp;</label>
         <select id="sel_bdm" class="form-control">
@@ -55,6 +82,9 @@
           <option value="11">11</option>
           <option value="12">12</option>
         </select>
+        <div class="invalid-feedback">
+          此欄位為必填
+        </div>
       </div>
       <div class="form-group col-12 col-md-3">
         <label class="d-none d-md-block">&nbsp;</label>
@@ -92,57 +122,85 @@
           <option value="30">30</option>
           <option value="31">31</option>
         </select>
-      </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group col-12">
-        <label for="input_name">性別</label>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="radio_gender2" id="radio_gender_m" value="m" checked>
-          <label class="form-check-label">
-            男
-          </label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="radio_gender2" id="radio_gender_f" value="f">
-          <label class="form-check-label" for="radio_gender_f">
-            女
-          </label>
+        <div class="invalid-feedback">
+          此欄位為必填
         </div>
       </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group col-12">
-        <label for="input_name" class="d-block">參加項目</label>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="check_games" id="check_games_0" value="0">
-          <label class="form-check-label" for="check_games_0">
-            卡卡頌
-          </label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="check_games" id="check_games_1" value="1">
-          <label class="form-check-label" for="check_games_1">
-            三國殺
-          </label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" name="check_games" id="check_games_2" value="2">
-          <label class="form-check-label" for="check_games_2">
-            七大奇蹟
-          </label>
+      <div class="form-row">
+        <div class="form-group col-12">
+          <label for="input_name">性別</label>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="radio_gender2" id="radio_gender_m" value="m" checked>
+            <label class="form-check-label">
+              男
+            </label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="radio_gender2" id="radio_gender_f" value="f">
+            <label class="form-check-label" for="radio_gender_f">
+              女
+            </label>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group col-12 col-md-4">
-        <label>備註</label>
-        <textarea class="form-control" id="text_note" rows="3" placeholder="我想說"></textarea>
+
+      <div class="form-row">
+        <div class="form-group col-12">
+          <label for="input_name" class="d-block">參加項目</label>
+
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="check_games" id="check_games_0" value="0">
+            <label class="form-check-label" for="check_games_0">
+              卡卡頌
+            </label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="check_games" id="check_games_1" value="1">
+            <label class="form-check-label" for="check_games_1">
+              三國殺
+            </label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" name="check_games" id="check_games_2" value="2">
+            <label class="form-check-label" for="check_games_2">
+              七大奇蹟
+            </label>
+          </div>
+        </div>
+        <div class="invalid-feedback" id="check_games_invalid">
+          請確認是否有勾選
+        </div>
       </div>
-    </div>
-    <button class="btn btn-success">送出</button>
+
+      <div class="form-row">
+        <div class="form-group col-12 col-md-4">
+          <label>備註</label>
+          <textarea class="form-control" id="text_note" rows="3" placeholder="我想說"></textarea>
+        </div>
+      </div>
+      <button class="btn btn-success" id="send">送出</button>
   </form>
   <!-- Optional JavaScript -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
+  <!-- operate data sdk-->
+  <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-database.js"></script>
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyAxEuOiRWKkEHD5TJVMgLSf5ljnE5F81_0",
+      authDomain: "boardgame-30bab.firebaseapp.com",
+      databaseURL: "https://boardgame-30bab.firebaseio.com",
+      projectId: "boardgame-30bab",
+      storageBucket: "boardgame-30bab.appspot.com",
+      messagingSenderId: "192466606283",
+      appId: "1:192466606283:web:ed4113bdb2b11271"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -153,6 +211,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
     integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
